--- a/aula3/style.css
+++ b/aula3/style.css
@@ -1,48 +1,157 @@
-#banner {
-	width:100%;
+header {
+    background: #BBBBBB;
+    padding: 20px 0;
 }
 
-.principal{
-	background: #CCCCCC;
-	padding: 30px;
+.container {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
 }
 
-.titulo-principal {
-	padding-left: 20px;
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0px;
 }
 
-.titulo-centralizado {
-	text-align: center
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
 }
 
-p {
-	text-align: center;
+nav li a {
+    text-transform: uppercase;
+    color:  #000000;
+    font-weight: bold;
+    text-decoration: none;
 }
 
-#missao {
-	font-size: 20px
+nav li a:hover {
+    color: #C78C19;
+    text-decoration: underline;
 }
 
-em strong {
-	color: #FF0000;
+
+
+.produtos {
+    padding: 50px 0;
 }
 
-.itens {
-	font-style: italic
+.produtos li {
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
 }
 
-.beneficios {
-	background: #FFFFFF;
-	padding: 20px;
+.produtos li:hover {
+    border-color: #C78C19;
+    cursor: pointer;
 }
 
-ul {
-	display: inline-block;
-	vertical-align: top;
-	width: 20%;
-	margin-right: 15%;
+.produtos li:hover h2 {
+    font-size: 34px;
 }
 
-.imagembeneficios {
-	width: 50%;
+.produtos li:active {
+    border-color: #088C19;
+}
+
+.produtos h2 {
+    font-weight: bold;
+}
+
+.produtos li p.descricao {
+    font-size: 18px;
+}
+
+.produtos li p:last-child {
+    font-size: 22px;
+    font-weight: bold;
+    margin: 10px 0 0;
+}
+
+footer {
+    text-align: center;
+    background: url("./bg.jpg");
+    padding: 40px;
+}
+
+footer p {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin-top: 20px;
+}
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+form {
+    margin: 40px 0;
+}
+
+form label, form p {
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+.input-padrao {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+
+form textarea {
+    resize: none;
+}
+
+form label, form textarea{
+    display: block;
+}
+
+.checkbox {
+    margin: 20px 0;
+}
+
+input[type="submit"] {
+    width: 40%;
+    padding: 15px 0;
+    background: orange;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    cursor: pointer;
+    transition: 5s all;
+}
+
+input[type="submit"]:hover {
+    background: darkorange;
+    transform: scale(1.2);
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+table thead {
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
 }
