--- a/aula5/assets/css/menu/menu-link.css
+++ b/aula5/assets/css/menu/menu-link.css
@@ -1,4 +1,4 @@
-.menu-link {
+.menu__link {
     color: #808080;
     margin-right: 1.25rem;
     text-decoration: none;
@@ -6,11 +6,11 @@
 }
 
 
-.menu-link:hover {
+.menu__link:hover {
     text-decoration: underline;
 }
 
-.menu-link.active {
+.menu__link.active {
     color: #333333;
     font-weight: bold;
 }
