--- a/aula5/assets/css/cabecalho.css
+++ b/aula5/assets/css/cabecalho.css
@@ -5,3 +5,29 @@
     justify-content: space-between;
     padding: 0 2rem 0 2rem;
 }
+
+@media screen and (min-width: 0) {
+    .cabecalho {
+        justify-content: center;
+        padding: 0 1rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .cabecalho {
+        padding: 0 5rem;
+        justify-content: space-between;
+    }
+}
+
+@media screen and (min-width: 0) {
+    .cabecalho__logo {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .cabecalho__logo {
+        display: block;
+    }
+}
