--- a/aula_flexbox/css/flexbox.css
+++ b/aula_flexbox/css/flexbox.css
@@ -1,9 +1,38 @@
+.cabecalhoPrincipal .container {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+
 .cabecalhoPrincipal-nav {
     display: flex;
 }
 
-.cabecalhoPrincipal .container {
+.rodapePrincipal-navMap-list {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 260px;
+}
+
+.rodapePrincipal-patrocinadores .container {
+    align-items: center;
     display: flex;
     justify-content: space-between;
+}
+
+.rodapePrincipal-patrocinadores .rodapePrincipal-patrocinadores-list {
     align-items: center;
+    display: flex;
+    justify-content: space-around;
+    margin-right: 5%;
+    width: 70%;
+}
+
+.rodapePrincipal-patrocinadores .rodapePrincipal-contatoForm {
+    width: 25%;
+}
+
+.rodapePrincipal-contatoForm-fieldset {
+    display: flex;
 }
