--- a/aula_flexbox/css/flexbox.css
+++ b/aula_flexbox/css/flexbox.css
@@ -27,6 +27,23 @@
     margin-left: 0;
 }
 
+.conteudoPrincipal .videoSobre .container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.conteudoPrincipal .videoSobre .container .videoSobre-sobre {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.conteudoPrincipal .videoSobre .container .videoSobre-video {
+    flex: 2;
+}
+
 .rodapePrincipal-navMap-list {
     display: flex;
     flex-direction: column;
@@ -54,4 +71,45 @@
 
 .rodapePrincipal-contatoForm-fieldset {
     display: flex;
+}
+
+@media screen and (max-width: 768px) {
+    .cabecalhoPrincipal .container {
+        flex-direction: column;
+        align-items: unset;
+        text-align: center;
+    }
+    .cabecalhoPrincipal-nav {
+        flex-direction: column;
+    }
+    .conteudoPrincipal-cursos {
+        flex-direction: column;
+    }
+    .conteudoPrincipal-cursos .conteudoPrincipal-cursos-link {
+        width: 100%;
+        margin: 0 0 1% 0;
+    }
+    .rodapePrincipal-navMap-list {
+        height: auto;
+    }
+    .rodapePrincipal-patrocinadores .container {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .rodapePrincipal-patrocinadores .rodapePrincipal-patrocinadores-list  {
+        margin: 0;
+        width: 100%;
+    }
+    .rodapePrincipal-patrocinadores .rodapePrincipal-contatoForm {
+        width: auto;
+    }
+    .cabecalhoPrincipal-nav-link-app {
+        order: -1;
+    }
+    .conteudoPrincipal .videoSobre .container {
+        flex-direction: column;
+    }
+
+    
 }
