--- a/aula7/css/sobre.css
+++ b/aula7/css/sobre.css
@@ -10,7 +10,6 @@
     font-family: var(--montserrat);
     text-transform: uppercase;
     text-align: center;
-
     margin-bottom: 1.25rem;
 }
 
@@ -31,4 +30,27 @@
     justify-content: space-evenly;
 
     margin-bottom: 1rem;
+}
+
+.sobre__imagem {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .sobre {
+        display: flex;
+    }
+    .sobre__conteudo {
+        margin-right: 3rem;
+    }
+    .sobre__titulo {
+        text-align: left;
+    }
+    .sobre__texto--divisao {
+        border-bottom: 1px soldi var(--cinza-medio);
+        padding-bottom: 1.5rem;
+    }
+    .sobre__imagem {
+        display: block;
+    }
 }
