--- a/aula_gridlayout/assets/css/destaques.css
+++ b/aula_gridlayout/assets/css/destaques.css
@@ -1,5 +1,11 @@
+.caixa {
+    align-items: flex-end;
+    display: flex;
+}
+
 .destaques {
     display: grid;
+    gap: .2rem;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
     height: calc(100vh - 50px);
@@ -10,6 +16,15 @@
     background-position: center;
     background-size: cover;
 }
+
+.destaques__titulo {
+    background: rgba(0, 0, 0, .5);
+    color: #fdfdfd;
+    padding: .6rem;
+    text-align: center;
+    width: 100%;
+}
+
 
 .destaques__principal {
     background-image: url(../img/fortnite.jpg);
@@ -37,5 +52,27 @@
 }
 
 .destaques__categorias {
-    grid-area: 3 / 1 / 4 / 3;
+    grid-area: 3 / 1 / 3 / 3;
+}
+
+.destaques__categorias___lista {
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    justify-content: space-between;
+}
+
+
+.destaques__categorias___item {
+    align-items: center;
+    background-color: #fdfdfd;
+    border-left: 5px solid transparent;
+    color: #333333;
+    display: flex;
+    padding: 1rem;
+    width: 50%;
+}
+
+.destaques__categorias___link {
+    color: inherit;
 }
