--- a/aula_gridlayout/assets/css/style.css
+++ b/aula_gridlayout/assets/css/style.css
@@ -2,6 +2,10 @@
     --green: #00cc99;
     --red: #ff8080;
     --azul: #0099ff;
+    --branco: #fdfdfd;
+    --preto: #333333;
+    --cinza: #808080;
+    --cinza-claro: #dcdcdc;
 }
 
 
